# WAM-RL

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements-cu124.txt  requirements-robotwin.txt  requirements.txt
docs/: GRPO_STRICT_ARTIFACT_SCHEMA.md  PORTABLE_ENV_SETUP.md  README.md  RESEARCH_IMPLEMENTATION_PLAN.md  RL_FRAMEWORK_SYSTEM_REVIEW.md  SERVER_SETUP.md  WAM_RL_ACTOR_REPLAY_RUNBOOK.md  WAM_RL_CURRENT_PROJECT_STATUS.md  WAM_RL_EARLY_STAGE_WORK_SUMMARY.md  WAM_RL_MYRIAD_STORAGE_POLICY.md  WAM_RL_PAPER_DATA_PLAN.md  WAM_RL_RESEARCH_IMPLEMENTATION_PLAN_FRAMEWORK_FINAL.md  WAM_RL_RLINF_INTEGRATION_PLAN.md
script/: run_libero_smoke.sh  run_va_posttrain.sh
tests/: test_actor_replay.py  test_async_save_contract.py  test_audit_grpo_artifact_storage.py  test_build_grpo_groups_tool.py  test_collect_robotwin_rollouts.py  test_compare_robotwin_eval_episodes.py  test_config_registry.py  test_denoising_replay.py  test_diagnose_actor_replay.py  test_estimate_group_mixing.py  test_gate_actor_eval_promotion.py  test_grpo_dataset.py  test_grpo_group_builder.py  test_grpo_loss.py  test_grpo_manifest.py  test_inspect_actor_replay_checkpoint.py  test_inspect_grpo_replay_context.py  test_materialize_grpo_artifacts.py  test_merge_grpo_groups.py  test_myriad_grouped_rollout_jobs.py  test_myriad_grpo_train_job.py  test_myriad_repo_root_detection.py  test_myriad_rl_iteration_job.py  test_myriad_single_gpu_collect_job.py  test_offline_grpo_trainer.py  test_plan_myriad_storage_cleanup.py  test_plan_replay_context_collection.py  test_report_grpo_run_status.py  (+16 more)
(+97 files in other folders)
